--- a/Client/Fz.Kehu/Post/PostDetail.xaml
+++ b/Client/Fz.Kehu/Post/PostDetail.xaml
@@ -1,18 +1,18 @@
 ﻿<a:Win
-    x:Class="Dt.Base.WebViewWin"
+    x:Class="Dt.Fz.Kehu.PostDetail"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:a="using:Dt.Base">
 
     <a:WinCenter>
         <a:Tabs>
-            <a:Tab>
+            <a:Tab x:Name="_tab">
                 <a:Tab.Menu>
                     <a:Menu>
                         <a:Mi ID="分享" Icon="分享" Click="OnShare" />
                     </a:Menu>
                 </a:Tab.Menu>
-
+                
                 <WebView x:Name="_wv" />
             </a:Tab>
         </a:Tabs>
