--- a/Client/Fz.Mgr/Post/PostMgr.xaml
+++ b/Client/Fz.Mgr/Post/PostMgr.xaml
@@ -1,5 +1,5 @@
 ﻿<a:Win
-    x:Class="Dt.App.Pub.PostMgr"
+    x:Class="Dt.Fz.Mgr.PostMgr"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:a="using:Dt.Base"
@@ -56,7 +56,7 @@
                 </a:Tab.Menu>
                 <a:Fv x:Name="_fv">
                     <a:CText ID="Title" Title="标题" />
-                    <a:CImage ID="Cover" Title="封面" ImageHeight="164" Changed="OnPhotoChanged" />
+                    <a:CFile ID="Cover" Title="封面" ImageHeight="0" ImagePadding="0" />
                     <a:CBool ID="AllowComment" Title="允许评论" />
                     <a:CBool ID="AddAlbumLink" Title="添加相同专辑链接" />
                     <a:CBool ID="AddCatLink" Title="添加相同分类链接" />
