--- a/Client/Dt.Sample/ListView/LvListSelector.xaml
+++ b/Client/Dt.Sample/ListView/LvListSelector.xaml
@@ -69,7 +69,7 @@
             <a:Tab Title="属性">
                 <a:Fv Data="{Binding ElementName=_lv}">
                     <a:CList Title="选择模式" ID="SelectionMode" />
-                    <a:CBool Title="显示行分割线" ID="ShowRowLine" />
+                    <a:CBool Title="显示行分割线" ID="ShowItemBorder" />
                 </a:Fv>
             </a:Tab>
         </a:Tabs>
