--- a/Client/Dt.Sample/ListView/LvViewEx.xaml
+++ b/Client/Dt.Sample/ListView/LvViewEx.xaml
@@ -58,7 +58,7 @@
     <a:WinCenter>
         <a:Tabs>
             <a:Tab Title="列表">
-                <a:Lv x:Name="_lv">
+                <a:Lv x:Name="_lv" ViewMode="Table">
                     <a:Cols>
                         <a:Col ID="xm" Title="姓名" Width="120" />
                         <a:Col ID="bh" Title="编号" Width="80" />
