--- a/Client/Dt.Base/Themes/Generic.xaml
+++ b/Client/Dt.Base/Themes/Generic.xaml
@@ -4,9 +4,10 @@
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="/Dt.Base/Themes/Styles/Default.xaml" />
         <ResourceDictionary Source="/Dt.Base/Themes/Styles/Base.xaml" />
-        <ResourceDictionary Source="/Dt.Base/Themes/Styles/Menu.xaml" />
+        <ResourceDictionary Source="/Dt.Base/Themes/Styles/Desk.xaml" />
         <ResourceDictionary Source="/Dt.Base/Themes/Styles/Win.xaml" />
         <ResourceDictionary Source="/Dt.Base/Themes/Styles/Dialog.xaml" />
+        <ResourceDictionary Source="/Dt.Base/Themes/Styles/Menu.xaml" />
         <ResourceDictionary Source="/Dt.Base/Themes/Styles/FormView.xaml" />
         <ResourceDictionary Source="/Dt.Base/Themes/Styles/ListView.xaml" />
         <ResourceDictionary Source="/Dt.Base/Themes/Styles/TreeView.xaml" />
