--- a/Client/Dt.Sample/Menu/ContextMenuDemo.xaml
+++ b/Client/Dt.Sample/Menu/ContextMenuDemo.xaml
@@ -12,6 +12,17 @@
                     <a:Mi ID="保存" Icon="保存" ShowInPhone="Icon" />
                     <a:Mi ID="搜索" Icon="搜索" />
                     <a:Mi ID="选择项" Icon="pos机" IsCheckable="True" />
+                    <a:Mi ID="含子项" Icon="文件夹">
+                        <a:Mi ID="修改" Icon="修改" />
+                        <a:Mi ID="打开" Icon="打开">
+                            <a:Mi ID="设置" Icon="设置" />
+                            <a:Mi ID="复印" Icon="复印" />
+                            <a:Mi ID="打开" Icon="打开">
+                                <a:Mi ID="设置" Icon="设置" />
+                                <a:Mi ID="复印" Icon="复印" />
+                            </a:Mi>
+                        </a:Mi>
+                    </a:Mi>
                 </a:Menu>
             </a:Ex.Menu>
         </Button>
@@ -22,6 +33,17 @@
                     <a:Mi ID="保存" Icon="保存" ShowInPhone="Icon" />
                     <a:Mi ID="搜索" Icon="搜索" />
                     <a:Mi ID="选择项" Icon="pos机" IsCheckable="True" />
+                    <a:Mi ID="含子项" Icon="文件夹">
+                        <a:Mi ID="修改" Icon="修改" />
+                        <a:Mi ID="打开" Icon="打开">
+                            <a:Mi ID="设置" Icon="设置" />
+                            <a:Mi ID="复印" Icon="复印" />
+                            <a:Mi ID="打开" Icon="打开">
+                                <a:Mi ID="设置" Icon="设置" />
+                                <a:Mi ID="复印" Icon="复印" />
+                            </a:Mi>
+                        </a:Mi>
+                    </a:Mi>
                 </a:Menu>
             </a:Ex.Menu>
         </Border>
