--- a/Client/Dt.Base/Structure/Tools/SysTrace.xaml
+++ b/Client/Dt.Base/Structure/Tools/SysTrace.xaml
@@ -3,7 +3,8 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:a="using:Dt.Base"
-    Title="系统监视">
+    Title="系统监视"
+    AutoSaveLayout="False">
 
     <a:Win.Resources>
         <DataTemplate x:Key="Normal">
@@ -73,7 +74,7 @@
 
     <a:WinCenter>
         <a:Tabs>
-            <a:Tab>
+            <a:Tab Title="系统监视">
                 <a:Tab.Menu>
                     <a:Menu>
                         <a:Mi ID="清空" Icon="垃圾箱" Click="OnClear" />
@@ -93,8 +94,7 @@
                           BorderThickness="1"
                           Margin="0,0,-1,0"
                           Grid.Row="1">
-                        <TextBlock Text="详细" VerticalAlignment="Center" Margin="10,0,0,0" />
-                        <a:Menu Margin="40,0,0,0">
+                        <a:Menu>
                             <a:Mi ID="复制" Icon="复制" Click="OnCopy" />
                             <a:Mi ID="库路径" Icon="数据库" Click="OnLocalPath" />
                             <a:Mi ID="换行" Icon="左对齐" IsCheckable="True" Click="OnWrap" />
